<resources>
    <string name="app_name">Cryptocurrency</string>
    <string name="button_addCrypto">Add Cryptocurrency</string>
    <string name="hint_cryptoName">Name</string>
    <string name="hint_cryptoSymbol">Symbol</string>
    <string name="hint_cryptoInitialPriceUSD">Initial Price (USD)</string>
    <string name="hint_cryptoAmountInvestedUSD">Amount Invested (USD)</string>
    <string name="hint_cryptoCurrentPriceUSD">CurrentPrice (USD)</string>
    <string name="menu_addCrypto">Add</string>
    <string name="menu_cancelCrypto">Cancel</string>
    <string name="enter_crypto_name">Please Enter a Name</string>
    <string name="save_crypto"> Save Cryptocurrency </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_crypto_image">Select Cryptocurrency Image</string>
    <string name="change_crypto_image">Change Cryptocurrency Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteCrypto">Delete</string>
    <string name="button_Logout"> Sign Out </string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>